syntax = "proto3";

option go_package = "github.com/openacid/paxoskv";

// PaxosKV defines the paxos RPC.
//
// A Proposer sends all its fields in a Prepare request, with `Val` being left a nil.
// A Proposer sends all its fields in an Accept request, with `Val` being filled with
// the value it chose.
//
// An Acceptor responds all its fields in a Prepare reply.
// An Acceptor responds `LastBal` fields in a Accept reply.
//
// Thus we just use the struct of a Proposer as request struct.
// And the struct of an Acceptor as reply struct.
service PaxosKV {
    rpc Prepare (Proposer) returns (Acceptor) {}
    rpc Accept (Proposer) returns (Acceptor) {}
}

// BallotNum is the ballot number in paxos. It consists of a monotonically
// incremental number and a universally unique ProposerId.
message BallotNum {
    int64 N = 1;
    int64 ProposerId = 2;
}

// Value is the value part of a key-value record.
// In this demo it is just a int64
message Value {
    int64 Vi64 = 1;
}

// PaxosInstanceId specifies what paxos instance it runs on.
// A paxos instance is used to determine a specific version of a record.
// E.g.: for a key-value record foo₀=0, to set foo=2, a paxos instance is
// created to choose the value for key "foo", ver "1", i.e., foo₁
message PaxosInstanceId {
    // the key of a record to operate on.
    string Key = 1;

    // the version of the record to modify.
    int64  Ver = 2;
}

// Acceptor is the state of an Acceptor and also serves as the reply of the
// Prepare/Accept.
message Acceptor {
    // the last ballot number the instance knows of.
    BallotNum LastBal = 1;

    // the voted value by this Acceptor
    Value Val = 2;

    // at which ballot number the Acceptor voted it.
    BallotNum VBal = 3;
}

// Proposer is the state of a Proposer and also serves as the request of
// Prepare/Accept.
message Proposer {
    // what paxos instance it runs on
    PaxosInstanceId Id = 1;

    // Bal is the ballot number of a Proposer
    BallotNum Bal = 2;

    // Val is the value a Proposer has chosen.
    Value Val = 3;
}
